# B3-Multiagent-Analyst

./: README.md  agentes.py  app.py  dashboard_escrito.txt  financials.py  main.py  projeto.py  requirements.txt  teste.py  tools.py  vector_create.ipynb
data/: AcoesIndices_2025-06-11.csv  stock-analysis-fundamentals.csv  stock-analysis.csv
db/: index.faiss  index.pkl
docs/: Sistema Multiagente - Relatório.docx
financial_agents/: .gitignore  README.md  pyproject.toml
financial_agents/knowledge/: dados_fundamentalistas.txt  dashboard_escrito.txt  glossario_financias.txt
financial_agents/src/financial_agents/: crew_ai.py  main.py
financial_agents/src/financial_agents/config/: agents.yaml  tasks.yaml
financial_agents/src/financial_agents/tools/: custom_tool.py
notebooks/: vector_create.ipynb  web-scraping.ipynb
tests/: teste_streamlit.py
utils/: create_dashboard.py  vector_storage.py  yahoo_data.py
