[project]
name = "financial_agents"
version = "0.1.0"
description = "financial_agents using crewAI"
authors = [{ name = "Lucca Barbosa", email = "luccasena22@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0",
    "python-dotenv",
    "yfinance",
    "pandas",
    "plotly",
    "streamlit",
    "langchain",
    "langchain-openai"
]

[project.scripts]
financial_agents = "financial_agents.main:run"
run_crew = "financial_agents.main:run"
train = "financial_agents.main:train"
replay = "financial_agents.main:replay"
test = "financial_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
